cargo-features = ["edition2024"]

[package]
name = "json-line-parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
pin-project-lite = "0.2.13"
anyhow = "1.0.79"

shared = { path = "../shared" }
